objects/Volunteer_Shift__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Desired_of_Volunteers__c</fullName>
        <label>Desired # of Volunteers</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_End_Time__c</fullName>
        <label>Shift End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shift_Hours__c</fullName>
        <formula>(Shift_End_Time__c -  Shift_Start_Time__c)*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shift Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shift_Start_Time__c</fullName>
        <label>Shift Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Shifts_Taken__c</fullName>
        <description>displays the cumulative number of Confirmed or Completed Volunteer Shift Workers.</description>
        <label>Shifts Taken</label>
        <summaryFilterItems>
            <field>Volunteer_Shift_Worker__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Shift_Worker__c.Volunteer_Shift__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Vol_Hours_for_Shift__c</fullName>
        <formula>Shift_Hours__c  *  Shifts_Taken__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Vol Hours for Shift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteer_Activity__c</fullName>
        <formula>Volunteer_Job__r.Volunteer_Activity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Volunteer_Job__c</fullName>
        <label>Volunteer Job</label>
        <referenceTo>Volunteer_Job__c</referenceTo>
        <relationshipLabel>Volunteer Shifts</relationshipLabel>
        <relationshipName>Volunteer_Shifts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Volunteer_Organization__c</fullName>
        <formula>$Organization.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Volunteer Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Volunteers_Still_Needed__c</fullName>
        <formula>IF(( Desired_of_Volunteers__c  -  Shifts_Taken__c ) &gt; 0, ( Desired_of_Volunteers__c  -  Shifts_Taken__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Volunteers Still Needed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Volunteer Shift</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Volunteer Shift Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Start_before_End</fullName>
        <active>true</active>
        <errorConditionFormula>Shift_Start_Time__c &gt;  Shift_End_Time__c</errorConditionFormula>
        <errorDisplayField>Shift_End_Time__c</errorDisplayField>
        <errorMessage>No time travel allowed during volunteering! Shift Start Time must be before Shift End Time.</errorMessage>
    </validationRules>
</CustomObject>